fix(android): keep emergency WhatsApp sharing compatible with API 26